Octavoo commit:Se agrego contenido a la pagina, una seccion de atracciones y servicios que ofrece la ciudad, texto e imagenes en index.html

--- a/index.html
+++ b/index.html
@@ -69,5 +69,58 @@
     <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+  <!-- Sección de Atracciones -->
+  <section id="atracciones">
+    <section class="d-flex flex-column justify-content-center align-items-center pt-5 text-center w-50 m-auto">
+      <h1 class="p-3 fs-2 border-top border-3">Abu Dhabi y los <span class="text-primary">lujos</span> que sólo podrás disfrutar allí</h1>
+      <p class="p-3 fs-4">
+        <span class="text-primary"></span>Hay destinos y destinos. Lugares a los que merece la pena ir por su historia, por su naturaleza, por sus museos… Son miles las razones que se nos ocurren. Y una de ellas es el lujo. Si es esto lo que buscas, tu siguiente viaje debe ser a Abu Dhabi.
+      </p>
+    </section>
+  </section>
+
+  <!-- Sección de Servicios -->
+  <section class="w-100">
+    <div class="row w-75 mx-auto" id="servicios-fila-1">
+      <!-- Columna 1 -->
+      <div class="col-lg-6 col-md-12 col-sm-12 my-5 icono-wrap d-flex flex-column align-items-center">
+        <img src="https://static.oneclickdrive.com/uploads/mobcars/Bugatti_Chiron-Sports_2022_24139_24139_16819729968-1_small.jpg" alt="desarrollo" width="400" height="290">
+        <div class="text-center mt-3">
+          <h3 class="fs-2 mb-1">Autos de lujo</h3>
+          <p>En todas las calles y lugares públicos</p>
+        </div>
+      </div>
+  
+      <!-- Columna 2 -->
+      <div class="col-lg-6 col-md-12 col-sm-12 my-5 icono-wrap d-flex flex-column align-items-center">
+        <img src="https://media.revistaad.es/photos/60c22dd783fc694e193f35df/master/w_1600%2Cc_limit/203273.jpg" alt="concepto" width="400" height="290">
+        <div class="text-center mt-3">
+          <h3 class="fs-2 mb-1">Palacios</h3>
+          <p>Propiedades de Jeques o abiertas al público</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row w-75 mx-auto mb-5" id="servicios-fila-2">
+    <!-- Columna 3 -->
+    <div class="col-lg-6 col-md-12 col-sm-12 my-5 icono-wrap d-flex flex-column align-items-center">
+        <img src="https://img.freepik.com/fotos-premium/recorrido-torres-etihad-abu-dhabi_891336-25888.jpg" alt="comunicaciones" width="400" height="290">
+        <div class="text-center mt-3">
+        <h3 class="fs-2 mb-1">Rascacielos asombrosos</h3>
+        <p>Bellezas arquitectónicas como las TORRES ETIHAD</p>
+        </div>
+    </div>
+
+    <!-- Columna 4 -->
+    <div class="col-lg-6 col-md-12 col-sm-12 my-5 icono-wrap d-flex flex-column align-items-center">
+        <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2019/11/30/15751353609748.jpg" alt="seo" width="400" height="290">
+        <div class="text-center mt-3">
+        <h3 class="fs-2 mb-1">Entretenimiento</h3>
+        <p>Impresionantes estadios y circuitos de carreras F1</p>
+        </div>
+    </div>
+    </div>
+</section>
 </body>
 </html>
