--- a/index.html
+++ b/index.html
@@ -122,5 +122,20 @@
     </div>
     </div>
 </section>
+
+<!-- Sección de Ubicación -->
+<section id="ubicacion">
+    <div class="container w-50 m-auto text-center" id="equipo">
+    <h1 class="mb-5 fs-1">Un Lugar lleno de excentricidades y cultura</h1>
+    <p class="p-3 fs-4">
+        Abu Dhabi pertenece a los Emiratos árabes y es la segunda ciudad más poblada del país. Pese a la mala asociación que tenemos acerca de la cultura árabe en cuanto a conflictos bélicos, código de vestimenta en las mujeres, calor extremo entre otra clase de prohibiciones; la verdad es que se trata de un lugar pacífico y mucho resulta ser también parte de un mito.
+    </p>
+    </div>
+
+    <!-- Mapa de Google -->
+    <div id="local" class="border-top border-2">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d232565.83038806362!2d54.55862045!3d24.386830550000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e440f723ef2b9%3A0xc7cc2e9341971108!2sAbu%20Dabi%20-%20Emiratos%20%C3%81rabes%20Unidos!5e0!3m2!1ses!2smx!4v1718304089906!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</section>
 </body>
 </html>
